# Web3-Leads-Capstone

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: Web3_rss_sources.json  category_master.json  filters_master.json
data/output/: demo_opportunities.csv  demo_report.html  demo_report.md
data/sample/: sample_events.jsonl
docs/: architecture.md  course-learning-alignment.md  deployability.md  kaggle-writeup-draft.md  lead-qualification-spec.md  security.md  video-script.md  web3-signal-to-lead-youtube-demo.pptx  youtube-demo-recording-guide.md
scripts/: build_sanitized_sample.py
skills/web3-lead-qualification/: SKILL.md
skills/web3-lead-qualification/agents/: openai.yaml
src/: __init__.py  agent.py  cli.py  demo_pipeline.py  mcp_server.py  security.py  settings.py
src/core_pipeline/: __init__.py  dedupe_opportunities.py  opportunity_matcher.py  preprocess_events.py  rss_collector.py
tests/: test_agent_skill.py  test_demo_pipeline.py  test_mcp_server.py  test_security.py
web3_leads_agent/: __init__.py  agent.py
